--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ tgcrypto = "^1.2.5"
 pydantic = "^1.10.7"
 rich = "^13.3.4"
 uvloop = "^0.17.0"
-
+click = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.0"
@@ -22,3 +22,6 @@ pre-commit = "^3.2.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+tspider = "telespider:cli"
